--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -36,7 +36,8 @@
     "axios": "^0.19.2",
     "bnc-notify": "^1.3.0",
     "burner-provider": "^1.0.38",
-    "dash-js": "^1.3.5",
+    "dash": "^3.15.2",
+    "delay": "^4.4.0",
     "dotenv": "^8.2.0",
     "eth-hooks": "^1.1.2",
     "graphql": "^14.6.0",
@@ -47,6 +48,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.1",
+    "replace": "^1.2.0",
     "web3modal": "^1.5.0"
   },
   "devDependencies": {
